java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

archivesBaseName = 'core'

dependencies {
    api project(":api")
    api project(":gradle")

    api loggerLibs.log4j2.core
    api loggerLibs.log4j2.slf4j
    api loggerLibs.log4j2.jul

    api libs.quack
    api libs.snakeyaml

    runtimeOnly project(':intellij')
    runtimeOnly project(':mcforge')
    runtimeOnly project(':neoforge')

    testImplementation project(':gradle-test-api')
}

test {
    systemProperty("net.covers1624.covers1624.wstool.test_update", project.findProperty("test_update") != null)
}

publishing {
    publications {
        publication(MavenPublication) {
            artifactId archivesBaseName

            from components.java
            artifact(rootProject.tasks.named('genVersionManifest')) {
                extension 'json'
            }
        }
    }
}

